--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "express": "^4.18.2",
     "generate-password": "^1.7.1",
     "i": "^0.3.7",
     "nodemon": "^3.0.1"
